Fix spacing issues

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ h1{
     }
 
     h1{
-        font-size: 20px;
+        font-size: 24px;
     }
 
     p{
@@ -109,7 +109,7 @@ h1{
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 20px;
+        padding: 15px;
         margin: 60px 0px 40px 0px;
     }
 
